[package]
name = "btrfs-diskformat"
version = "0.3.0"
authors = ["Christopher Tam <ohgodtamit@gmail.com>"]
edition = "2018"
description = "An implementation of the BTRFS disk format."
readme = "README.md"
repository = "https://github.com/GodTamIt/btrfs-diskformat"
license = "BSD-2-Clause"
keywords = ["btrfs", "filesystem", "diskformat"]
categories = ["filesystem", "no-std"]

[dependencies]
byteorder = "^1.4.3"
bitflags = "^1.3"
num_enum = "^0.5"
static_assertions = "^1.1.0"
strum = { version = "^0.23", features = ["derive"] }
zerocopy = "^0.4.0"
