[package]
name = "btrfs-diskformat"
version = "0.5.0"
authors = ["Christopher Tam <ohgodtamit@gmail.com>"]
edition = "2021"
description = "An implementation of the BTRFS disk format."
readme = "README.md"
repository = "https://github.com/GodTamIt/btrfs-diskformat"
license = "BSD-2-Clause"
keywords = ["btrfs", "filesystem", "diskformat"]
categories = ["filesystem", "no-std"]

[dependencies]
byteorder = { version = "^1.4.3", default-features = false }
bitflags = "^1.3"
num_enum = { version = "^0.5", default-features = false }
static_assertions = "^1.1.0"
strum = { version = "^0.23", features = ["derive"], default-features = false }
zerocopy = "^0.4.0"
